add check confirm account handler and add doc
